[gd_scene load_steps=6 format=3 uid="uid://drc81uvnh0r0u"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_w78lq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h43cd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dt05a"]
bg_color = Color(0.617454, 0.617455, 0.617454, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyr04"]
bg_color = Color(0.355314, 0.355314, 0.355313, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5u8be"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[node name="options_menu" type="Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w78lq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MASTER VOLUME
"

[node name="masterV" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MUSIC VOLUME
"

[node name="musicV" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SOUND EFFECTS VOLUME
"

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MUTE
"

[node name="mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -170.0
offset_right = 200.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_h43cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_dt05a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lyr04")
theme_override_styles/normal = SubResource("StyleBoxFlat_5u8be")
text = "BACK"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/masterV" to="." method="_on_master_v_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/musicV" to="." method="_on_music_v_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
